Updates for ios10 playback: - Enabled zooming in browser - Videos play in fullscreen when played - Adjusted video size in fullscreen to take care of browser url bar - Show/hide timeline in portrait and landscape mode - Close the content navigator automatically when going into a lecture - Fixed few issues with seeking and dragging the playhead - Hide timeline buttons and warnings on mobile

--- a/app/styles/main-foundation.css
+++ b/app/styles/main-foundation.css
@@ -34,6 +34,7 @@ width: 78%;
 .content-containeropen.large-2, .content-containeropen.medium-4{
   min-width: 100%;
   max-width: 100%;
+  z-index: 6 !important;
   /*width: 100% ;*/
 }
 .max-width-me{
